Fixed horizontal scroll on iphone

--- a/app/styles/responsive.less
+++ b/app/styles/responsive.less
@@ -174,7 +174,7 @@
       &.world {
       text-align: center;
         ul#countries {
-          width:310px;
+          width:290px;
           li {
             .font-size(14);
             line-height: 1.2;
@@ -498,10 +498,6 @@
               margin-top: 86px;
             }
           }
-        }
-        .world {
-          width: 290px;
-          height: 120px;
         }
       }
     }
